# D2-nodes-ComfyUI

./: .gitignore  README.md  README_ja.md  README_zh.md  __init__.py  d2_nodes.py  pyproject.toml
.github/workflows/: publish.yml
config/: sizeselector_config.sample.yaml  template_config.sample.yaml
docs/en/: index.md  node.md  node_float.md  node_image.md  node_text.md  node_xy.md  workflow.md
docs/ja/: index.md  node.md  node_float.md  node_image.md  node_text.md  node_xy.md  workflow.md
docs/zh/: index.md  node.md  node_float.md  node_image.md  node_xy.md  (+2 more)
modules/: pnginfo_util.py  util.py
nodes/: d2_audio_nodes.py  d2_image_nodes.py  d2_merge_nodes.py  d2_nodes.py  d2_refiner_nodes.py  d2_size_nodes.py  d2_text_nodes.py  d2_xy_nodes.py
test/: test_replace_template.py
web/: D2_AnyDelivery.js  D2_CheckpointList.js  D2_EmptyImageAlpha.js  D2_FilenameTemplate.js  D2_FloatContainer.js  D2_FolderImage.js  D2_FolderImageQueue.js  D2_GetImageSize.js  D2_GridImage.js  D2_ImageStack.js  D2_LoadImage.js  D2_LoadLora.js  D2_LoraList.js  D2_ModelList.js  D2_MultiOutput.js  D2_PresetSelector.js  D2_PreviewImage.js  D2_ProgressPreview.js  D2_Prompt.js  D2_PromptConverDialog.js  D2_QueueButton.js  D2_RefinerStepsTester.js  D2_RegexSwitcher.js  D2_ShortcutKey.js  D2_StringToPlot.js  D2_UploadImage.js  D2_XY_Plot.js  customWidget.js  util_lightbox.js  utils.js
workflow/: checkpoint_test_20260701.json  filename_template_20260701.json  folder_image_queue_upscale_20260701.json  hiresfix_20260701.json  lora_t2i_20260701.json  simple_t2i_20260701.json  xy_easy_20260701.json
(+23 files in other folders)
