[project]
name = "d2-nodes-comfyui"
description = "This is a collection of custom nodes that make ComfyUI slightly more convenient."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/da2el-ai/D2-nodes-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "da2el"
DisplayName = "D2-nodes-ComfyUI"
Icon = ""
