[project]
description = "This is a collection of custom nodes that make ComfyUI slightly more convenient."
license = {file = "LICENSE"}
name = "d2-nodes-comfyui"
version = "32.0.0"

[project.urls]
Repository = "https://github.com/da2el-ai/D2-nodes-ComfyUI"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
DisplayName = "D2-nodes-ComfyUI"
Icon = "https://raw.githubusercontent.com/da2el-ai/D2-nodes-ComfyUI/refs/heads/main/docs/img/cover.jpg"
PublisherId = "da2el"
